public class OverBookingException extends Exception{

    public OverBookingException(String msg) {
        super(msg);
    }
}
