public class StanzaOccupataException extends Exception {
    public StanzaOccupataException(String msg) {
        super(msg);
    }
}
